[pentago-highlight-fix] Highlight enhance and last move more visible

--- a/src/app/components/game-components/game-component/game-component.scss
+++ b/src/app/components/game-components/game-component/game-component.scss
@@ -115,6 +115,9 @@
 .last-move-stroke.manual-stroke {
     fill: var(--last-move);
 }
+.last-move-fill {
+    fill: var(--last-move);
+}
 .victory-fill {
     fill: var(--victory);
 }
